# ann_implement

./: BatchTrainer.cpp  BatchTrainer.h  CMakeLists.txt  DataEntry.h  DataGenerator.cpp  DataGenerator.h  DataReader.cpp  DataReader.h  HOGFeature.cpp  HOGFeature.h  Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkTrainer.h  README.md  Trainer.cpp  Trainer.h  Utils.cpp  Utils.h  Visualize.cpp  main.cpp
ann/: BatchTrainer.cpp  BatchTrainer.h  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  Trainer.cpp  Trainer.h
data/: sinData.txt  sinData_test.txt  sinInput.txt  sinInput_test.txt
dataReader/: DataEntry.h  DataReader.cpp
visualize/: Visualize.cpp
